@@ -1,0 +1,168 @@
+#as: -mvsx
+#objdump: -d -Mvsx
+#name: VSX tests
+
+.*: +file format elf(32)?(64)?-powerpc.*
+
+
+Disassembly of section \.text:
+
+0+00 <start>:
+   0:	7d 0a a4 99 	lxsdx   vs40,r10,r20
+   4:	7d 0a a6 99 	lxvd2x  vs40,r10,r20
+   8:	7d 0a a2 99 	lxvdsx  vs40,r10,r20
+   c:	7d 0a a6 19 	lxvw4x  vs40,r10,r20
+  10:	7d 0a a5 99 	stxsdx  vs40,r10,r20
+  14:	7d 0a a7 99 	stxvd2x vs40,r10,r20
+  18:	7d 0a a7 19 	stxvw4x vs40,r10,r20
+  1c:	f1 00 e5 67 	xsabsdp vs40,vs60
+  20:	f1 12 e1 07 	xsadddp vs40,vs50,vs60
+  24:	f0 92 e1 5e 	xscmpodp cr1,vs50,vs60
+  28:	f0 92 e1 1e 	xscmpudp cr1,vs50,vs60
+  2c:	f1 12 e5 87 	xscpsgndp vs40,vs50,vs60
+  30:	f1 00 e4 27 	xscvdpsp vs40,vs60
+  34:	f1 00 e5 63 	xscvdpsxds vs40,vs60
+  38:	f1 00 e1 63 	xscvdpsxws vs40,vs60
+  3c:	f1 00 e5 23 	xscvdpuxds vs40,vs60
+  40:	f1 00 e1 23 	xscvdpuxws vs40,vs60
+  44:	f1 00 e5 27 	xscvspdp vs40,vs60
+  48:	f1 00 e5 e3 	xscvsxddp vs40,vs60
+  4c:	f1 00 e5 a3 	xscvuxddp vs40,vs60
+  50:	f1 12 e1 c7 	xsdivdp vs40,vs50,vs60
+  54:	f1 12 e1 0f 	xsmaddadp vs40,vs50,vs60
+  58:	f1 12 e1 4f 	xsmaddmdp vs40,vs50,vs60
+  5c:	f1 12 e5 07 	xsmaxdp vs40,vs50,vs60
+  60:	f1 12 e5 47 	xsmindp vs40,vs50,vs60
+  64:	f1 12 e1 8f 	xsmsubadp vs40,vs50,vs60
+  68:	f1 12 e1 cf 	xsmsubmdp vs40,vs50,vs60
+  6c:	f1 12 e1 87 	xsmuldp vs40,vs50,vs60
+  70:	f1 00 e5 a7 	xsnabsdp vs40,vs60
+  74:	f1 00 e5 e7 	xsnegdp vs40,vs60
+  78:	f1 12 e5 0f 	xsnmaddadp vs40,vs50,vs60
+  7c:	f1 12 e5 4f 	xsnmaddmdp vs40,vs50,vs60
+  80:	f1 12 e5 8f 	xsnmsubadp vs40,vs50,vs60
+  84:	f1 12 e5 cf 	xsnmsubmdp vs40,vs50,vs60
+  88:	f1 00 e1 27 	xsrdpi  vs40,vs60
+  8c:	f1 00 e1 af 	xsrdpic vs40,vs60
+  90:	f1 00 e1 e7 	xsrdpim vs40,vs60
+  94:	f1 00 e1 a7 	xsrdpip vs40,vs60
+  98:	f1 00 e1 67 	xsrdpiz vs40,vs60
+  9c:	f1 00 e1 6b 	xsredp  vs40,vs60
+  a0:	f1 00 e1 2b 	xsrsqrtedp vs40,vs60
+  a4:	f1 00 e1 2f 	xssqrtdp vs40,vs60
+  a8:	f1 12 e1 47 	xssubdp vs40,vs50,vs60
+  ac:	f0 92 e1 ee 	xstdivdp cr1,vs50,vs60
+  b0:	f0 80 e1 aa 	xstsqrtdp cr1,vs60
+  b4:	f1 00 e7 67 	xvabsdp vs40,vs60
+  b8:	f1 00 e6 67 	xvabssp vs40,vs60
+  bc:	f1 12 e3 07 	xvadddp vs40,vs50,vs60
+  c0:	f1 12 e2 07 	xvaddsp vs40,vs50,vs60
+  c4:	f1 12 e3 1f 	xvcmpeqdp vs40,vs50,vs60
+  c8:	f1 12 e7 1f 	xvcmpeqdp\. vs40,vs50,vs60
+  cc:	f1 12 e2 1f 	xvcmpeqsp vs40,vs50,vs60
+  d0:	f1 12 e6 1f 	xvcmpeqsp\. vs40,vs50,vs60
+  d4:	f1 12 e3 9f 	xvcmpgedp vs40,vs50,vs60
+  d8:	f1 12 e7 9f 	xvcmpgedp\. vs40,vs50,vs60
+  dc:	f1 12 e2 9f 	xvcmpgesp vs40,vs50,vs60
+  e0:	f1 12 e6 9f 	xvcmpgesp\. vs40,vs50,vs60
+  e4:	f1 12 e3 5f 	xvcmpgtdp vs40,vs50,vs60
+  e8:	f1 12 e7 5f 	xvcmpgtdp\. vs40,vs50,vs60
+  ec:	f1 12 e2 5f 	xvcmpgtsp vs40,vs50,vs60
+  f0:	f1 12 e6 5f 	xvcmpgtsp\. vs40,vs50,vs60
+  f4:	f1 12 e7 87 	xvcpsgndp vs40,vs50,vs60
+  f8:	f1 1c e7 87 	xvmovdp vs40,vs60
+  fc:	f1 1c e7 87 	xvmovdp vs40,vs60
+ 100:	f1 12 e6 87 	xvcpsgnsp vs40,vs50,vs60
+ 104:	f1 1c e6 87 	xvmovsp vs40,vs60
+ 108:	f1 1c e6 87 	xvmovsp vs40,vs60
+ 10c:	f1 00 e6 27 	xvcvdpsp vs40,vs60
+ 110:	f1 00 e7 63 	xvcvdpsxds vs40,vs60
+ 114:	f1 00 e3 63 	xvcvdpsxws vs40,vs60
+ 118:	f1 00 e7 23 	xvcvdpuxds vs40,vs60
+ 11c:	f1 00 e3 23 	xvcvdpuxws vs40,vs60
+ 120:	f1 00 e7 27 	xvcvspdp vs40,vs60
+ 124:	f1 00 e6 63 	xvcvspsxds vs40,vs60
+ 128:	f1 00 e2 63 	xvcvspsxws vs40,vs60
+ 12c:	f1 00 e6 23 	xvcvspuxds vs40,vs60
+ 130:	f1 00 e2 23 	xvcvspuxws vs40,vs60
+ 134:	f1 00 e7 e3 	xvcvsxddp vs40,vs60
+ 138:	f1 00 e6 e3 	xvcvsxdsp vs40,vs60
+ 13c:	f1 00 e3 e3 	xvcvsxwdp vs40,vs60
+ 140:	f1 00 e2 e3 	xvcvsxwsp vs40,vs60
+ 144:	f1 00 e7 a3 	xvcvuxddp vs40,vs60
+ 148:	f1 00 e6 a3 	xvcvuxdsp vs40,vs60
+ 14c:	f1 00 e3 a3 	xvcvuxwdp vs40,vs60
+ 150:	f1 00 e2 a3 	xvcvuxwsp vs40,vs60
+ 154:	f1 12 e3 c7 	xvdivdp vs40,vs50,vs60
+ 158:	f1 12 e2 c7 	xvdivsp vs40,vs50,vs60
+ 15c:	f1 12 e3 0f 	xvmaddadp vs40,vs50,vs60
+ 160:	f1 12 e3 4f 	xvmaddmdp vs40,vs50,vs60
+ 164:	f1 12 e2 0f 	xvmaddasp vs40,vs50,vs60
+ 168:	f1 12 e2 4f 	xvmaddmsp vs40,vs50,vs60
+ 16c:	f1 12 e7 07 	xvmaxdp vs40,vs50,vs60
+ 170:	f1 12 e6 07 	xvmaxsp vs40,vs50,vs60
+ 174:	f1 12 e7 47 	xvmindp vs40,vs50,vs60
+ 178:	f1 12 e6 47 	xvminsp vs40,vs50,vs60
+ 17c:	f1 12 e3 8f 	xvmsubadp vs40,vs50,vs60
+ 180:	f1 12 e3 cf 	xvmsubmdp vs40,vs50,vs60
+ 184:	f1 12 e2 8f 	xvmsubasp vs40,vs50,vs60
+ 188:	f1 12 e2 cf 	xvmsubmsp vs40,vs50,vs60
+ 18c:	f1 12 e3 87 	xvmuldp vs40,vs50,vs60
+ 190:	f1 12 e2 87 	xvmulsp vs40,vs50,vs60
+ 194:	f1 00 e7 a7 	xvnabsdp vs40,vs60
+ 198:	f1 00 e6 a7 	xvnabssp vs40,vs60
+ 19c:	f1 00 e7 e7 	xvnegdp vs40,vs60
+ 1a0:	f1 00 e6 e7 	xvnegsp vs40,vs60
+ 1a4:	f1 12 e7 0f 	xvnmaddadp vs40,vs50,vs60
+ 1a8:	f1 12 e7 4f 	xvnmaddmdp vs40,vs50,vs60
+ 1ac:	f1 12 e6 0f 	xvnmaddasp vs40,vs50,vs60
+ 1b0:	f1 12 e6 4f 	xvnmaddmsp vs40,vs50,vs60
+ 1b4:	f1 12 e7 8f 	xvnmsubadp vs40,vs50,vs60
+ 1b8:	f1 12 e7 cf 	xvnmsubmdp vs40,vs50,vs60
+ 1bc:	f1 12 e6 8f 	xvnmsubasp vs40,vs50,vs60
+ 1c0:	f1 12 e6 cf 	xvnmsubmsp vs40,vs50,vs60
+ 1c4:	f1 00 e3 27 	xvrdpi  vs40,vs60
+ 1c8:	f1 00 e3 af 	xvrdpic vs40,vs60
+ 1cc:	f1 00 e3 e7 	xvrdpim vs40,vs60
+ 1d0:	f1 00 e3 a7 	xvrdpip vs40,vs60
+ 1d4:	f1 00 e3 67 	xvrdpiz vs40,vs60
+ 1d8:	f1 00 e3 6b 	xvredp  vs40,vs60
+ 1dc:	f1 00 e2 6b 	xvresp  vs40,vs60
+ 1e0:	f1 00 e2 27 	xvrspi  vs40,vs60
+ 1e4:	f1 00 e2 af 	xvrspic vs40,vs60
+ 1e8:	f1 00 e2 e7 	xvrspim vs40,vs60
+ 1ec:	f1 00 e2 a7 	xvrspip vs40,vs60
+ 1f0:	f1 00 e2 67 	xvrspiz vs40,vs60
+ 1f4:	f1 00 e3 2b 	xvrsqrtedp vs40,vs60
+ 1f8:	f1 00 e2 2b 	xvrsqrtesp vs40,vs60
+ 1fc:	f1 00 e3 2f 	xvsqrtdp vs40,vs60
+ 200:	f1 00 e2 2f 	xvsqrtsp vs40,vs60
+ 204:	f1 12 e3 47 	xvsubdp vs40,vs50,vs60
+ 208:	f1 12 e2 47 	xvsubsp vs40,vs50,vs60
+ 20c:	f0 92 e3 ee 	xvtdivdp cr1,vs50,vs60
+ 210:	f0 92 e2 ee 	xvtdivsp cr1,vs50,vs60
+ 214:	f0 80 e3 aa 	xvtsqrtdp cr1,vs60
+ 218:	f0 80 e2 aa 	xvtsqrtsp cr1,vs60
+ 21c:	f1 12 e4 17 	xxland  vs40,vs50,vs60
+ 220:	f1 12 e4 57 	xxlandc vs40,vs50,vs60
+ 224:	f1 12 e5 17 	xxlnor  vs40,vs50,vs60
+ 228:	f1 12 e4 97 	xxlor   vs40,vs50,vs60
+ 22c:	f1 12 e4 d7 	xxlxor  vs40,vs50,vs60
+ 230:	f1 12 e0 97 	xxmrghw vs40,vs50,vs60
+ 234:	f1 12 e1 97 	xxmrglw vs40,vs50,vs60
+ 238:	f1 12 e0 57 	xxmrghd vs40,vs50,vs60
+ 23c:	f1 12 e1 57 	xxpermdi vs40,vs50,vs60,1
+ 240:	f1 12 e2 57 	xxpermdi vs40,vs50,vs60,2
+ 244:	f1 12 e3 57 	xxmrgld vs40,vs50,vs60
+ 248:	f1 12 90 57 	xxspltd vs40,vs50,0
+ 24c:	f1 12 90 57 	xxspltd vs40,vs50,0
+ 250:	f1 12 93 57 	xxspltd vs40,vs50,1
+ 254:	f1 12 93 57 	xxspltd vs40,vs50,1
+ 258:	f1 12 e0 57 	xxmrghd vs40,vs50,vs60
+ 25c:	f1 12 e0 57 	xxmrghd vs40,vs50,vs60
+ 260:	f1 12 e3 57 	xxmrgld vs40,vs50,vs60
+ 264:	f1 12 92 57 	xxswapd vs40,vs50
+ 268:	f1 12 92 57 	xxswapd vs40,vs50
+ 26c:	f1 12 e7 bf 	xxsel   vs40,vs50,vs60,vs62
+ 270:	f1 12 e2 17 	xxsldwi vs40,vs50,vs60,2
+ 274:	f1 02 e2 93 	xxspltw vs40,vs60,2
